--- a/packages/SystemUI/res/drawable/ic_qs_brightness_auto_on.xml
+++ b/packages/SystemUI/res/drawable/ic_qs_brightness_auto_on.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-    Copyright (C) 2017-2018 The LineageOS Project
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:height="24dp"
+    android:width="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
 
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
+    <path
+        android:fillColor="?android:attr/colorControlActivated"
+        android:pathData="M10.74 0.98v3h1.8v-3h-1.8z"/>
 
-        http://www.apache.org/licenses/LICENSE-2.0
+    <path
+        android:fillColor="?android:attr/colorControlActivated"
+        android:pathData="M5.74 11.98c0-3.258 2.642-5.9 5.9-5.9 3.259 0 5.9 2.642 5.9 5.9 0 3.259-2.641 5.9-5.9 5.9-3.258 0-5.9-2.641-5.9-5.9zm15.352 3.1h-2.904l-2.282 7.42 1.72 0.53 0.566-1.84h2.896l0.566 1.84 1.72-0.53-2.282-7.42zm-0.558 4.31l-0.772-2.51h-0.244l-0.772 2.51h1.788z"
+        android:fillType="evenOdd"/>
 
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
--->
-<vector android:height="24.0dip" android:width="24.0dip" android:viewportWidth="24.0" android:viewportHeight="24.0"
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <path 
-    android:fillColor="?android:attr/colorControlActivated"
-    android:pathData="M18.935,16l-2.794,7h1.216l0.694,-1.723h2.832L21.577,23L22.86,23l-2.812,-7ZM18.472,20.145 L19.472,17.619 20.465,20.145ZM11.25,19h1.5v4h-1.5ZM12,6.25A5.75,5.75 0,1 0,17.75 12,5.757 5.757,0 0,0 12,6.25ZM12,16.25A4.25,4.25 0,1 1,16.25 12,4.255 4.255,0 0,1 12,16.25ZM6.47,16.47 L7.53,17.53L4.752,20.309 3.691,19.248ZM5,12.75L1,12.75v-1.5L5,11.25ZM6.47,7.53 L3.691,4.752 4.752,3.691 7.53,6.47ZM12.75,5h-1.5L11.25,1h1.5ZM17.53,7.53L16.47,6.47l2.778,-2.779 1.061,1.061ZM23,11.25v1.5L19,12.75v-1.5Z" />
+    <path
+        android:fillColor="?android:attr/colorControlActivated"
+        android:pathData="M16.66 5.687l2.122-2.121 1.273 1.272-2.121 2.122-1.273-1.273zm5.98 5.393h-3v1.8h3v-1.8zm-10.1 8.9v3h-1.8v-3h1.8zm-8.042 0.414l2.122-2.12L5.347 17l-2.121 2.122 1.272 1.272zM3.64 12.88h-3v-1.8h3v1.8zM3.226 4.838l2.12 2.122L6.62 5.687 4.498 3.566 3.226 4.838z"/>
 </vector>
