--- a/packages/SystemUI/res/layout/quick_settings_brightness_dialog.xml
+++ b/packages/SystemUI/res/layout/quick_settings_brightness_dialog.xml
@@ -21,11 +21,23 @@
     android:paddingRight="28dp"
     android:layout_gravity="center_vertical"
     style="@style/BrightnessDialogContainer">
+	
+	<ImageView
+        android:id="@+id/brightness_level"
+        android:clickable="false"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/ic_qs_brightness_high"
+        android:scaleType="centerInside"
+        android:contentDescription="@null"
+        android:paddingStart="20dp"
+        android:paddingEnd="10dp"/>
 
     <com.android.systemui.settings.ToggleSliderView
         android:id="@+id/brightness_slider"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
         android:contentDescription="@string/accessibility_brightness"
@@ -35,11 +47,13 @@
     <ImageView
         android:id="@+id/brightness_icon"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
-        android:layout_marginStart="-8dp"
+        android:background="@drawable/ripple_drawable"
         android:src="@drawable/ic_qs_brightness_auto_off"
+        android:scaleType="centerInside"
         android:contentDescription="@null"
-        android:visibility="gone" />
+        android:paddingStart="10dp"
+        android:paddingEnd="20dp"/>
 
 </LinearLayout>
