--- a/packages/SystemUI/res/layout/quick_status_bar_expanded_header.xml
+++ b/packages/SystemUI/res/layout/quick_status_bar_expanded_header.xml
@@ -59,7 +59,7 @@
         android:clipChildren="false"
         android:clipToPadding="false"
         android:focusable="true"
-        android:paddingBottom="10dp"
+        android:layout_marginBottom="10dp"
         android:importantForAccessibility="yes" />
 
     <TextView
